--- a/style.css
+++ b/style.css
@@ -14,6 +14,15 @@
 
 }
 
+html {
+    height: -webkit-fill-available;
+}
+
+body {
+    min-height: 100%;
+    min-height: -webkit-fill-available;
+}
+
 
 nav {
     user-select: none;
@@ -103,8 +112,8 @@ nav {
     #newMeetingBtn {
         position: fixed;
         bottom: 10%;
-        right: 50%;
-        transform: translateX(50%);
+        right: 5%;
+        /* transform: translateX(50%); */
         /* border-radius: 50%; */
         padding-top: 0.6rem;
         padding-top: 0.6rem;
