--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ nav {
 }
 
 .mainHeight {
-    min-height: calc(100vh - (40px + 16px) - 24px);
+    min-height: calc(100% - (40px + 16px) - 24px);
 }
 
 
