--- a/style.css
+++ b/style.css
@@ -14,6 +14,10 @@
 
 }
 
+:focus {
+    outline: none !important;
+}
+
 html {
     height: -webkit-fill-available;
 }
@@ -68,8 +72,10 @@ nav {
     transition: all 0.1s ease-in-out;
 }
 
+.secondaryBoxShadow:active,
 .secondaryBoxShadow:hover,
-.secondaryBoxShadow:focus {
+.secondaryBoxShadow:focus,
+.secondaryBoxShadow:active:focus {
     box-shadow: var(--boxShadowPlace) 8px var(--boxShadowColor);
     ;
 }
