trying to solve btn issue in mobile"

--- a/style.css
+++ b/style.css
@@ -145,7 +145,12 @@ nav {
     border: none !important;
     /* color: var(--black); */
 }
-.btn,.btn i{line-height:50%}
+
+.btn,
+.btn span,
+.btn span i {
+    /* line-height: 50% */
+}
 
 @media (max-width: 767px) {
     #newMeetingBtn {
