--- a/style.css
+++ b/style.css
@@ -171,10 +171,10 @@ nav {
 }
 
 @media (max-width: 767px) {
-    #newMeetingBtn {
+    #sidebar {
         position: fixed;
-        bottom: 10%;
-        right: 5%;
+        bottom: 0;
+        right: 0;
         /* transform: translateX(50%); */
         /* border-radius: 50%; */
         z-index: 20;
