--- a/style.css
+++ b/style.css
@@ -170,11 +170,13 @@ nav {
     border-radius: 0 !important;
 }
 
+
 @media (max-width: 767px) {
     #sidebar {
         position: fixed;
         bottom: 0;
         right: 0;
+        left: 0;
         /* transform: translateX(50%); */
         /* border-radius: 50%; */
         z-index: 20;
