--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ nav {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    background-color: #fff !important;
+    /* background-color: #fff !important; */
     overflow: auto;
     color: var(--primaryFontColor);
     position: relative;
@@ -85,13 +85,17 @@ nav {
 }
 
 .spinner-border {
-    color: #1877F2;
+    color: #fff;
 }
 
-#login-component {
-    /* position: relative; */
-    /* z-index: 10; */
-    /* top: 50px; */
+#loadingComponentFullPage {
+    position: absolute;
+    right: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 10;
+    top: 48px;
+    background-color: rgba(255, 255, 255, 0.8);
 }
 
 .btn-primary {
