--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ nav {
     z-index: 100000;
 }
 
+
+
 .navBoxShadow {
     --boxShadowPlaceOfNav: 0 2px;
     --boxShadowBlurOfNav: 20px;
@@ -173,6 +175,23 @@ nav {
 
 #fbSignOutBtn {
     border-radius: 0 !important;
+}
+
+.meetingCard {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    cursor: pointer;
+    border-radius: .5rem;
+}
+
+.meetingCard.final {
+    background-color: #A08FBE;
+}
+
+.meetingCard.notFinal {
+    background-color: #C9B3F1;
 }
 
 
